add topic balance